# powerpc-ose

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
elfpatcher/: asm.h  codegen.cpp  codegen.h  elfpatcher.h  main.cpp  reader.cpp  reader.h  utils.cpp  utils.h  virtual.cpp  virtual.h
example/: Makefile  example.c  hooks.txt
station-code/: .gitignore  Makefile  hooks.txt  tbrc_ram.elf
station-code/include/: genAddressInclude.sh  orig.h  symbols.h  types.h
station-code/lib/: gencode.sh
station-code/linker/: README.md  link.x
station-code/src/: exaddr.c  exaddr.h
